# UnityOpenGLAsyncReadback

./: .gitignore  LICENSE  README.md
.github/workflows/: activation.yml  test_and_build.yml
NativePlugin/: .clang-format  .clang-tidy  .cmake-format.py  CMakeLists.txt
NativePlugin/src/: AsyncGPUReadbackPlugin.cpp  AsyncGPUReadbackPlugin.hpp  AsyncGPUReadbackPluginAPI.cpp  AsyncGPUReadbackPluginAPI.hpp  OpenGLAsyncGPUReadbackPlugin.cpp  OpenGLAsyncGPUReadbackPlugin.hpp  OpenGLAsyncGPUReadbackPluginAPI.cpp  TypeHelpers.hpp
UnityExampleProject/Assets/OpenglAsyncReadback/Editor/: Builder.cs
UnityExampleProject/Assets/OpenglAsyncReadback/ExampleScenes/: ComputeBufferTest.cs  UsePlugin.cs
UnityExampleProject/Assets/OpenglAsyncReadback/Scripts/: AsyncGPUReadbackPlugin.cs  AsyncReadback.cs  AsyncReadbackUpdater.cs  NativeArrayUtility.cs  OpenGLAsyncReadbackRequest.cs
UnityExampleProject/Assets/OpenglAsyncReadback/Tests/: ComputeBufferReadbackTests.cs  UnitReadbackTest.cs
UnityExampleProject/ProjectSettings/: ProjectSettings.asset
UnityPlugin/Assets/OpenglAsyncReadback/Scripts/: UniversalAsyncGPUReadback.asmdef
UnityPlugin/Assets/UniversalAsyncGPUReadbackPlugin/Editor/: Builder.cs
UnityPlugin/Assets/UniversalAsyncGPUReadbackPlugin/ExampleScenes/: ComputeBufferTest.cs  UsePlugin.cs
UnityPlugin/Assets/UniversalAsyncGPUReadbackPlugin/Scripts/: AsyncGPUReadbackPlugin.cs  AsyncReadback.cs  OpenGLAsyncReadbackRequest.cs
UnityPlugin/Assets/UniversalAsyncGPUReadbackPlugin/Tests/: ComputeBufferReadbackTests.cs  Tests.asmdef  TextureReadbackTests.cs  UnitReadbackTest.cs
UnityPlugin/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
